--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -1,5 +1,6 @@
-source.. = src/,\
-           resources/
+source.. = resources/,\
+           java-src/,\
+           bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
@@ -8,11 +9,14 @@ bin.includes = META-INF/,\
                libs/fskml-1.0.7.jar,\
                libs/rengine-1.8.4.jar,\
                libs/rserve-engine-1.8.4.jar,\
-               libs/kotlin-osgi-bundle-1.1.4-3.jar,\
                libs/jris-1.0.0.jar,\
                ez-vcard-lib/ez-vcard-0.10.2.jar,\
                ez-vcard-lib/freemarker-2.3.23.jar,\
                ez-vcard-lib/jackson-core-2.6.1.jar,\
                ez-vcard-lib/jsoup-1.8.3.jar,\
                ez-vcard-lib/vinnie-2.0.0.jar,\
-               libs/jackson-module-kotlin-2.8.7.jar
+               libs/jackson-module-kotlin-2.8.7.jar,\
+               kotlin-lib/kotlin-reflect-1.0.6.jar,\
+               kotlin-lib/kotlin-stdlib-1.1.2-2.jar,\
+               kotlin-lib/kotlin-stdlib-jre7-1.1.2-2.jar
+output.. = bin/
