--- a/de.bund.bfr.knime.fsklab.nodes.deprecated/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes.deprecated/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="lib" path="libs/CombineArchive-1.1.jar"/>
 	<classpathentry kind="lib" path="libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar"/>
 	<classpathentry kind="lib" path="libs/jdom-2.0.1.jar"/>
