--- a/de.bund.bfr.knime.fsklab.nodes.deprecated/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes.deprecated/build.properties
@@ -9,3 +9,4 @@ bin.includes = META-INF/,\
                libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar,\
                libs/jsoup-1.9.2.jar,\
                libs/pmfml-0.0.11.jar
+src.excludes = test/
