--- a/de.bund.bfr.knime.fsklab.nodes.test/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes.test/.classpath
@@ -2,8 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/de.bund.bfr.knime.fsklab.nodes/libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar"/>
-	<classpathentry kind="lib" path="/de.bund.bfr.knime.fsklab.nodes/libs/pmfml-0.0.11.jar"/>
+	<classpathentry excluding="de/bund/bfr/knime/nodes/FskMetaDataTest.java|de/bund/bfr/knime/nodes/MetadataDocumentTest.java|de/bund/bfr/knime/nodes/SelectorNodeTest.java|de/bund/bfr/knime/nodes/UtilTest.java|de/bund/bfr/knime/nodes/VariableTest.java" kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
