--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -11,7 +11,8 @@ bin.includes = META-INF/,\
                libs/freemarker-2.3.23.jar,\
                libs/vinnie-2.0.0.jar,\
                libs/jris-1.0.0.jar,\
-               icons/
+               icons/,\
+               libs/bfr-swing-1.0-SNAPSHOT.jar
 source.. = src/,\
            resources/
            output.. = bin/
