--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -7,12 +7,12 @@
 	<classpathentry exported="true" kind="lib" path="libs/rserve-engine-1.8.4.jar"/>
 	<classpathentry kind="lib" path="libs/jris-1.0.0.jar"/>
 	<classpathentry kind="lib" path="libs/bfr-swing-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="libs/fskml-1.0.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry exported="true" kind="lib" path="libs/CombineArchive-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/fskml-1.0.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jdom-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jcalendar-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
