--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -1,6 +1,5 @@
 bin.includes = META-INF/,\
                plugin.xml,\
-               libs/fskml-1.0.7.jar,\
                .,\
                libs/CombineArchive-1.1.jar,\
                libs/jdom-2.0.1.jar,\
@@ -12,7 +11,8 @@ bin.includes = META-INF/,\
                libs/vinnie-2.0.0.jar,\
                libs/jris-1.0.0.jar,\
                icons/,\
-               libs/bfr-swing-1.0-SNAPSHOT.jar
+               libs/bfr-swing-1.0-SNAPSHOT.jar,\
+               libs/fskml-1.0.8.jar
 source.. = src/,\
            resources/
            output.. = bin/
