--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/rserve-engine-1.8.4.jar"/>
 	<classpathentry kind="lib" path="libs/jris-1.0.0.jar"/>
 	<classpathentry kind="lib" path="libs/bfr-swing-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="D:/code/FSK-Lab/de.bund.bfr.knime.fsklab.nodes/libs/fskml-1.0.9.jar" sourcepath="libs/fskml-1.0.9-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/miguelalba/git/FSK-Lab/de.bund.bfr.knime.fsklab.nodes/libs/fskml-1.0.9.jar" sourcepath="libs/fskml-1.0.9-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
