--- a/de.bund.bfr.knime.fsklab.nodes/.settings/org.eclipse.core.resources.prefs
+++ b/de.bund.bfr.knime.fsklab.nodes/.settings/org.eclipse.core.resources.prefs
@@ -8,3 +8,6 @@ encoding//resources/MessagesBundle_es_ES.properties=UTF-8
 encoding//resources/ReaderNodeBundle.properties=UTF-8
 encoding//resources/ReaderNodeBundle_de_DE.properties=UTF-8
 encoding//resources/ReaderNodeBunldle_es_ES.properties=UTF-8
+encoding//resources/RunnerNodeBundle.properties=UTF-8
+encoding//resources/RunnerNodeBundle_de_DE.properties=UTF-8
+encoding//resources/RunnerNodeBundle_es_ES.properties=UTF-8
