--- a/de.bund.bfr.knime.fsklab.nodes/.settings/org.eclipse.core.resources.prefs
+++ b/de.bund.bfr.knime.fsklab.nodes/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//resources/CreatorNodeBundle_es_ES.properties=UTF-8
 encoding//resources/MessagesBundle.properties=UTF-8
 encoding//resources/MessagesBundle_de_DE.properties=UTF-8
 encoding//resources/MessagesBundle_es_ES.properties=UTF-8
