--- a/de.bund.bfr.knime.fsklab.nodes/.settings/org.eclipse.core.resources.prefs
+++ b/de.bund.bfr.knime.fsklab.nodes/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,5 @@ encoding//resources/CreatorNodeBundle_es_ES.properties=UTF-8
 encoding//resources/MessagesBundle.properties=UTF-8
 encoding//resources/MessagesBundle_de_DE.properties=UTF-8
 encoding//resources/MessagesBundle_es_ES.properties=UTF-8
+encoding//resources/ReaderNodeBundle_de_DE.properties=UTF-8
+encoding//resources/ReaderNodeBundle_es_ES.properties=UTF-8
