--- a/de.bund.bfr.knime.fsklab.nodes/resources/RunnerNodeBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/RunnerNodeBundle.properties
@@ -1,10 +1,10 @@
 # strings for the runner node
-runner_width_label = Width
-runner_height_label = Height
-runner_res_label = Resolution
-runner_textsize_label = Text size
+width_label = Width
+height_label = Height
+res_label = Resolution
+textsize_label = Text size
 
-runner_width_tooltip = Width of the plot
-runner_height_tooltip = Height of the plot
-runner_res_tooltip = Nominal resolution in ppi
-runner_textsize_tooltip = Default point size of plotted text
+width_tooltip = Width of the plot
+height_tooltip = Height of the plot
+res_tooltip = Nominal resolution in ppi
+textsize_tooltip = Default point size of plotted text
