Fix German and Spanish strings for the runner node
Needed to specify the UTF-8 encoding.

--- a/de.bund.bfr.knime.fsklab.nodes/.settings/org.eclipse.core.resources.prefs
+++ b/de.bund.bfr.knime.fsklab.nodes/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,5 @@ encoding//resources/MessagesBundle_de_DE.properties=UTF-8
 encoding//resources/MessagesBundle_es_ES.properties=UTF-8
 encoding//resources/ReaderNodeBundle_de_DE.properties=UTF-8
 encoding//resources/ReaderNodeBundle_es_ES.properties=UTF-8
+encoding//resources/RunnerNodeBundle_de_DE.properties=UTF-8
+encoding//resources/RunnerNodeBundle_es_ES.properties=UTF-8
