Fix JS sources in FSK-Lab
JS and CSS sources were not added to the build.

--- a/de.bund.bfr.knime.fsklab.nodes.deprecated/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes.deprecated/build.properties
@@ -9,5 +9,6 @@ bin.includes = META-INF/,\
                libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar,\
                libs/jsoup-1.9.2.jar,\
                libs/pmfml-0.0.11.jar,\
-               libs/bfr-swing-1.0-SNAPSHOT.jar
+               libs/bfr-swing-1.0-SNAPSHOT.jar,\
+               js-src/
 src.excludes = test/
