--- a/de.bund.bfr.knime.fsklab.nodes.deprecated2/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes.deprecated2/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                libs/CombineArchive-1.1.jar,\
                libs/fskml-0.0.1-SNAPSHOT.jar,\
                libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar,\
-               libs/pmfml-0.0.8.jar
+               libs/pmfml-0.0.8.jar,\
+               icons/
