--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -11,7 +11,13 @@ bin.includes = META-INF/,\
                libs/jris-1.0.0.jar,\
                icons/,\
                libs/bfr-swing-1.0-SNAPSHOT.jar,\
-               libs/fskml-1.0.10.jar
+               libs/fskml-1.0.11.jar,\
+               sedml_libs/jaxen-1.1.6.jar,\
+               sedml_libs/jdom-1.1.3.jar,\
+               sedml_libs/jdom-contrib-1.1.3.jar,\
+               sedml_libs/jlibsedml-2.2.3.jar,\
+               sedml_libs/jmathml-2.2.1.jar,\
+               sedml_libs/xom-1.2.5.jar
 source.. = src/,\
            resources/
            output.. = bin/
