--- a/de.bund.bfr.knime.fsklab.nodes/resources/RunnerNodeBundle.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/resources/RunnerNodeBundle.properties
@@ -3,8 +3,10 @@ width_label = Width
 height_label = Height
 res_label = Resolution
 textsize_label = Text size
+simulation_label = Simulation
 
 width_tooltip = Width of the plot
 height_tooltip = Height of the plot
 res_tooltip = Nominal resolution in ppi
 textsize_tooltip = Default point size of plotted text
+simulation_tooltip = Selected simulation
