--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -7,12 +7,19 @@
 	<classpathentry exported="true" kind="lib" path="libs/rserve-engine-1.8.4.jar"/>
 	<classpathentry kind="lib" path="libs/jris-1.0.0.jar"/>
 	<classpathentry kind="lib" path="libs/bfr-swing-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="libs/fskml-1.0.11.jar" sourcepath="libs/fskml-1.0.11-sources.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/jaxen-1.1.6.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/jdom-1.1.3.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/jdom-contrib-1.1.3.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/jlibsedml-2.2.3.jar" sourcepath="sedml_libs/jlibsedml-2.2.3-sources.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/jmathml-2.2.1.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/xom-1.2.5.jar"/>
+	<classpathentry kind="lib" path="libs/jsbml-1.2-SNAPSHOT-with-dependencies.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry exported="true" kind="lib" path="libs/CombineArchive-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jcalendar-1.4.jar"/>
-	<classpathentry kind="lib" path="libs/fskml-1.0.10.jar" sourcepath="libs/fskml-1.0.10-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
