--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -53,11 +53,131 @@
      <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.ReaderNodeFactory" />
      <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.WriterNodeFactory" />
      <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.EditorNodeFactory" />
-     <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.FSK2MetadataNodeFactory" />
+     <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.JoinerNodeFactory" />
      <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.SimulatorNodeFactory" />
-     
-     <!-- Joiner node is marked deprecated while in development so users cannot use it. It will be
-     undeprecated once it is finished. -->
-     <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.JoinerNodeFactory" deprecated="true" />
+     <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.JoinerNodeFactory" />
+  
+
    </extension>
+    
+   <extension point="org.knime.js.core.javascriptComponents">
+    <!-- Javascript component for Fsk joiner node -->
+    <javascriptComponent
+      getComponentValue-method-name="getComponentValue"
+      implementationBundleID="de.bund.bfr.knime.fsklab.js.joiner.bundle"
+      init-method-name="init"
+      javascriptComponentID="de.bund.bfr.knime.fsklab.js.joiner"
+      name="FSK Joiner"
+      namespace="joiner">
+    </javascriptComponent>
+    
+   
+  </extension>
+  
+  <extension point="org.knime.js.core.webResources">
+    <!-- JS and CSS code for Fsk Joiner node -->
+    <webResourceBundle
+      debug="true"
+      name="FSK Joiner"
+      usesDefine="false"
+      version="0.0.1"
+      webResourceBundleID="de.bund.bfr.knime.fsklab.js.joiner.bundle">
+      
+      <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/"
+        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/">
+      </webResource>
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jquery.min.js" type="JAVASCRIPT" />
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/lodash.min.js" type="JAVASCRIPT" />
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/backbone.min.js" type="JAVASCRIPT" />
+   
+   
+   	  <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js" type="JAVASCRIPT" />
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css" type="CSS"  />
+      
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/joiner.css" type="CSS" />
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/joiner.js" type="JAVASCRIPT" />
+      
+      <!-- Dependencies -->
+      <webDependency webResourceBundleID="bootstrap-datepicker_1.6.4_Debug"></webDependency>
+    </webResourceBundle>
+
+   
+    
+    <!--
+    bootstrap-datepicker debug
+    Requires:
+    * Bootstrap 2.0.4+
+    * jQuery 1.7.1+
+     -->
+    <webResourceBundle
+      debug="true"
+      name="bootstrap-datepicker 1.6.4"
+      usesDefine="false"
+      version="1.6.4"
+      webResourceBundleID="bootstrap-datepicker_1.6.4_Debug">
+      <webResource
+        relativePathSource="js-src/bootstrap-datepicker/1_6_4/debug/"
+        relativePathTarget="js-src/bootstrap-datepicker/1_6_4/debug/">
+      </webResource>
+      <importResource relativePath="js-src/bootstrap-datepicker/1_6_4/debug/css/bootstrap-datepicker3.css" type="CSS" />
+      <importResource relativePath="js-src/bootstrap-datepicker/1_6_4/debug/js/bootstrap-datepicker.js" type="JAVASCRIPT" />
+      <webDependency webResourceBundleID="bootstrap_3.3.7_Debug"></webDependency>
+    </webResourceBundle>
+    
+    <!--
+    bootstrap-datepicker
+    Requires:
+    * Bootstrap 2.0.4+
+    * jQuery 1.7.1+
+    -->
+    <webResourceBundle
+      debug="false"
+      name="bootstrap-datepicker 1.6.4"
+      usesDefine="false"
+      version="1.6.4"
+      webResourceBundleID="bootstrap-datepicker_1.6.4">
+      <webResource
+        relativePathSource="js-src/bootstrap-datepicker/1_6_4/min/"
+        relativePathTarget="js-src/bootstrap-datepicker/1_6_4/min/">
+      </webResource>
+      <importResource relativePath="js-src/bootstrap-datepicker/1_6_4/min/css/bootstrap-datepicker3.min.css" type="CSS" />
+      <importResource relativePath="js-src/bootstrap-datepicker/1_6_4/min/js/bootstrap-datepicker.min.js" type="JAVASCRIPT" />
+      <webDependency webResourceBundleID="bootstrap_3.3.7"></webDependency>
+    </webResourceBundle>
+    
+    <!-- Bootstrap 3.3.7 with jQuery3+ as dependency. -->
+    <webResourceBundle
+      debug="false"
+      name="bootstrap 3.3.7"
+      usesDefine="false"
+      version="3.3.7"
+      webResourceBundleID="bootstrap_3.3.7">
+      <webResource
+        relativePathSource="js-src/bootstrap/3_3_7/min/"
+        relativePathTarget="js-src/bootstrap/3_3_7/min/">
+      </webResource>
+      <importResource relativePath="js-src/bootstrap/3.3.7/min/css/bootstrap.min.css" type="CSS" />
+      <importResource relativePath="js-src/bootstrap/3.3.7/min/css/bootstrap-theme.min.css" type="CSS" />
+      <importResource relativePath="js-src/bootstrap/3_3_7/min/js/bootstrap.min.js" type="JAVASCRIPT" />
+      <webDependency webResourceBundleID="jQuery_3.1.1"></webDependency>
+    </webResourceBundle>
+    
+    <!-- Bootstrap 3.3.7 with jQuery3+ as dependency. -->
+    <webResourceBundle
+      debug="true"
+      name="bootstrap 3.3.7"
+      usesDefine="false"
+      version="3.3.7"
+      webResourceBundleID="bootstrap_3.3.7_Debug">
+      <webResource
+        relativePathSource="js-src/bootstrap/3_3_7/debug/"
+        relativePathTarget="js-src/bootstrap/3_3_7/debug/">
+      </webResource>
+      <importResource relativePath="js-src/bootstrap/3_3_7/debug/css/bootstrap.css" type="CSS" />
+      <importResource relativePath="js-src/bootstrap/3_3_7/debug/css/bootstrap-theme.css" type="CSS" />
+      <importResource relativePath="js-src/bootstrap/3_3_7/debug/js/bootstrap.js" type="JAVASCRIPT" />
+      <webDependency webResourceBundleID="jQuery_3.1.1"></webDependency>
+    </webResourceBundle>
+  </extension>
 </plugin>
