Joiner SVGCell output!

--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -100,6 +100,10 @@
       <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/lodash.min.js" type="JAVASCRIPT" />
       <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/backbone.min.js" type="JAVASCRIPT" />
    
+   	  <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/bootstrap.min.css" type="CSS"  />
+   	  <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/bootstrap.min.js" type="JAVASCRIPT" />
+      
+      
    	  <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js" type="JAVASCRIPT" />
       <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css" type="CSS"  />
       
