--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -55,9 +55,42 @@
      <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.EditorNodeFactory" />
      <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.FSK2MetadataNodeFactory" />
      <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.SimulatorNodeFactory" />
+     <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.JSSimulatorNodeFactory" />
      
      <!-- Joiner node is marked deprecated while in development so users cannot use it. It will be
      undeprecated once it is finished. -->
      <node category-path="/fsklab" factory-class="de.bund.bfr.knime.fsklab.nodes.JoinerNodeFactory" deprecated="true" />
+   </extension>
+   
+   <extension point="org.knime.js.core.javascriptComponents">
+     <!-- JavaScript component for the simulator node -->
+     <javascriptComponent
+       getComponentValue-method-name="getComponentValue"
+       implementationBundleID="de.bund.bfr.knime.fsklab.nodes.jssimulator.bundle"
+       init-method-name="init"
+       javascriptComponentID="de.bund.bfr.knime.fsklab.nodes.jssimulator"
+       name="JavaScript Simulation Configurator"
+       namespace="simulator">
+     </javascriptComponent>
+   </extension>
+   
+   <extension point="org.knime.js.core.webResources">
+     <webResourceBundle
+       debug="true"
+       name="JavaScript Simulation Configurator"
+       usesDefine="false"
+       version="0.0.1"
+       webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.jssimulator.bundle">
+       
+       <!-- JS code -->
+       <webResource
+         relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/jssimulator.js"
+         relativePathTarget="de/bund/bfr/knime/fsklab/nodes/jssimulator.js">
+       </webResource>
+       
+       <importResource
+         relativePath="de/bund/bfr/knime/fsklab/nodes/jssimulator.js"
+         type="JAVASCRIPT" />
+     </webResourceBundle>
    </extension>
 </plugin>
