--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -36,6 +36,7 @@
    <extension id="de.bund.bfr.knime.pmm.fskx.bin.preferences.RPreferenceInitializer"
      point="org.eclipse.core.runtime.preferences">
      <initializer class="de.bund.bfr.knime.fsklab.nodes.rbin.preferences.RPreferenceInitializer" />
+     <initializer class="de.bund.bfr.knime.fsklab.nodes.rbin.preferences.LanguagePreferenceInitializer" />
    </extension>
   
    <!-- Preference page for custom R -->
@@ -43,7 +44,7 @@
      <page category="org.knime.workbench.ui.preferences"
        class="de.bund.bfr.knime.fsklab.nodes.rbin.preferences.RPreferencePage"
        id="de.bund.bfr.knime.fsklab.nodes.bin.rbin.preferences.RPreferencePage"
-       name="BfR R settings" />
+       name="FSK-Lab settings" />
    </extension>
    
    <extension point="org.knime.workbench.repository.nodes">
