EMF FSK EDITOR!

--- a/de.bund.bfr.knime.fsklab.nodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="libs/batik-svg-dom.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/batik-util-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/ez-vcard-0.10.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/freemarker-2.3.23.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/vinnie-2.0.0.jar"/>
@@ -21,5 +23,7 @@
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry exported="true" kind="lib" path="libs/CombineArchive-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="D:/GIT/FSK-Lab/de.bund.bfr.knime.fsklab.nodes/libs/batik-svg-dom.jar"/>
+	<classpathentry kind="lib" path="D:/GIT/FSK-Lab/de.bund.bfr.knime.fsklab.nodes/libs/batik-util-1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
