--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -17,7 +17,10 @@ bin.includes = META-INF/,\
                sedml_libs/jdom-contrib-1.1.3.jar,\
                sedml_libs/jlibsedml-2.2.3.jar,\
                sedml_libs/jmathml-2.2.1.jar,\
-               sedml_libs/xom-1.2.5.jar
+               sedml_libs/xom-1.2.5.jar,\
+               libs/batik-svg-dom.jar,\
+               libs/batik-util-1.7.jar,\
+               js-src/
 source.. = src/,\
            resources/
            output.. = bin/
