--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -88,108 +88,170 @@
     <webResourceBundle
       debug="true"
       name="FSK Joiner"
-      usesDefine="false"
-      version="0.0.1"
+      usesDefine="true"
+      version="1.0.0"
       webResourceBundleID="de.bund.bfr.knime.fsklab.js.joiner.bundle">
-      
-      <webResource
+     
+       <webResource
         relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/"
-        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/">
+        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/">
       </webResource>
-      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jquery.min.js" type="JAVASCRIPT" />
-      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/lodash.min.js" type="JAVASCRIPT" />
-      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/backbone.min.js" type="JAVASCRIPT" />
-   
-   	  <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/bootstrap.min.css" type="CSS"  />
-   	  <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/bootstrap.min.js" type="JAVASCRIPT" />
+     
+     
+     
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/joiner.css" type="CSS" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/joiner.js" type="JAVASCRIPT" />
       
-      
-   	  <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js" type="JAVASCRIPT" />
-      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css" type="CSS"  />
-      
-      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/joiner.css" type="CSS" />
-      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/joiner.js" type="JAVASCRIPT" />
-      
-      <!-- Dependencies -->
-      <webDependency webResourceBundleID="bootstrap-datepicker_1.6.4_Debug"></webDependency>
+       <!-- Dependencies -->
+      <webDependency webResourceBundleID="fskeditor" />
+	  <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.jointjs"></webDependency>
+	  <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.jointjscss"></webDependency>
+	  <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.bundle.js" />
+  
     </webResourceBundle>
+    
+    
+      
+	<webResourceBundle debug="true" name="Jointjs" version="1.0.0"
+      webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.jointjs">
+      <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js"
+        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js">
+      </webResource>
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.js" type="JAVASCRIPT" />
+      <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.backbone" />
+      <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.lodash.min.js" />
+    </webResourceBundle>
+      
+      <webResourceBundle debug="true" name="backbone" version="1.0.0"	
+      webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.backbone">
+      <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/backbone.js"
+        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/backbone.js">
+      </webResource>
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/backbone.js" type="JAVASCRIPT" />
+      
+      <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.underscore.js" />
+    </webResourceBundle>
+      
+      
+      
+      
+       <webResourceBundle debug="true" name="underscore" version="1.0.0"
+      webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.underscore.js">
+      <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/underscore.js"
+        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/underscore.js">
+      </webResource>
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/underscore.js" type="JAVASCRIPT" />
+    </webResourceBundle>
+    
+      <webResourceBundle debug="true" name="lodash" version="1.0.0"
+      webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.lodash.min.js">
+      <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/lodash.min.js"
+        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/lodash.min.js">
+      </webResource>
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs/lodash.min.js" type="JAVASCRIPT" />
+    </webResourceBundle>
+    
+    
+  
+   <webResourceBundle debug="true" name="Jointjscss" version="1.0.0"
+      webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.jointjscss">
+      <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css"
+        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css">
+      </webResource>
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/jointjs.css" type="CSS" />
+    </webResourceBundle>
+    
+    
+    <webResourceBundle
+      debug="true"
+      name="fskeditor"
+      usesDefine="true"
+      version="1.0.0"
+      webResourceBundleID="fskeditor">
+       <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/jquery.min.js"
+        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/jquery.min.js">
+      </webResource>
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/jquery.min.js" type="JAVASCRIPT" />
+       <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/codemirror.js"
+        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/codemirror.js">
+      </webResource>
+	  <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/codemirror.js" type="JAVASCRIPT" />
+	   <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/codemirror.css"
+        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/codemirror.css">
+      </webResource>
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/codemirror.css" type="CSS" />
+      <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/App.css"
+        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/App.css">
+      </webResource>
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/App.css" type="CSS" />
+       <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap.min.css"
+        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap.min.css">
+      </webResource>
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap.min.css" type="CSS" />
+       <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap-tabcollapse.js"
+        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap-tabcollapse.js">
+      </webResource>
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap-tabcollapse.js" type="JAVASCRIPT" />
+       <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap.min.js"
+        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap.min.js">
+      </webResource>
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/fskemfeditor/bootstrap.min.js" type="JAVASCRIPT" />
+      
+      </webResourceBundle>
+    
+      
+    
+    
+     <webResourceBundle
+      debug="true"
+      name="de.bund.bfr.knime.fsklab.nodes.joiner.bundle.js"
+      usesDefine="true"
+      version="1.0.0"
+      webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.bundle.js">
+       <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/bundle.js"
+        relativePathTarget="de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/bundle.js">
+      </webResource>
+      <importResource relativePath="de/bund/bfr/knime/fsklab/nodes/joiner/emfbundle/bundle.js" type="JAVASCRIPT" />
+      <webDependency webResourceBundleID="react" />
+      <webDependency webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.lodash.min.js" />
+      
+      
+      </webResourceBundle>
+      
+     <webResourceBundle
+      debug="true"
+      name="react"
+      usesDefine="true"
+      version="1.0.0"
+      webResourceBundleID="react">
+       <webResource
+        relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/react/"
+        relativePathTarget="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/react/">
+      </webResource>
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/react/react.min.js" type="JAVASCRIPT" />
+      <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/react/react-dom.min.js" type="JAVASCRIPT" />
+      
+      
+      
+      </webResourceBundle>
+      
 
-   
-    
-    <!--
-    bootstrap-datepicker debug
-    Requires:
-    * Bootstrap 2.0.4+
-    * jQuery 1.7.1+
-     -->
-    <webResourceBundle
-      debug="true"
-      name="bootstrap-datepicker 1.6.4"
-      usesDefine="false"
-      version="1.6.4"
-      webResourceBundleID="bootstrap-datepicker_1.6.4_Debug">
-      <webResource
-        relativePathSource="js-src/bootstrap-datepicker/1_6_4/debug/"
-        relativePathTarget="js-src/bootstrap-datepicker/1_6_4/debug/">
-      </webResource>
-      <importResource relativePath="js-src/bootstrap-datepicker/1_6_4/debug/css/bootstrap-datepicker3.css" type="CSS" />
-      <importResource relativePath="js-src/bootstrap-datepicker/1_6_4/debug/js/bootstrap-datepicker.js" type="JAVASCRIPT" />
-      <webDependency webResourceBundleID="bootstrap_3.3.7_Debug"></webDependency>
-    </webResourceBundle>
-    
-    <!--
-    bootstrap-datepicker
-    Requires:
-    * Bootstrap 2.0.4+
-    * jQuery 1.7.1+
-    -->
-    <webResourceBundle
-      debug="false"
-      name="bootstrap-datepicker 1.6.4"
-      usesDefine="false"
-      version="1.6.4"
-      webResourceBundleID="bootstrap-datepicker_1.6.4">
-      <webResource
-        relativePathSource="js-src/bootstrap-datepicker/1_6_4/min/"
-        relativePathTarget="js-src/bootstrap-datepicker/1_6_4/min/">
-      </webResource>
-      <importResource relativePath="js-src/bootstrap-datepicker/1_6_4/min/css/bootstrap-datepicker3.min.css" type="CSS" />
-      <importResource relativePath="js-src/bootstrap-datepicker/1_6_4/min/js/bootstrap-datepicker.min.js" type="JAVASCRIPT" />
-      <webDependency webResourceBundleID="bootstrap_3.3.7"></webDependency>
-    </webResourceBundle>
-    
-    <!-- Bootstrap 3.3.7 with jQuery3+ as dependency. -->
-    <webResourceBundle
-      debug="false"
-      name="bootstrap 3.3.7"
-      usesDefine="false"
-      version="3.3.7"
-      webResourceBundleID="bootstrap_3.3.7">
-      <webResource
-        relativePathSource="js-src/bootstrap/3_3_7/min/"
-        relativePathTarget="js-src/bootstrap/3_3_7/min/">
-      </webResource>
-      <importResource relativePath="js-src/bootstrap/3.3.7/min/css/bootstrap.min.css" type="CSS" />
-      <importResource relativePath="js-src/bootstrap/3.3.7/min/css/bootstrap-theme.min.css" type="CSS" />
-      <importResource relativePath="js-src/bootstrap/3_3_7/min/js/bootstrap.min.js" type="JAVASCRIPT" />
-      <webDependency webResourceBundleID="jQuery_3.1.1"></webDependency>
-    </webResourceBundle>
-    
-    <!-- Bootstrap 3.3.7 with jQuery3+ as dependency. -->
-    <webResourceBundle
-      debug="true"
-      name="bootstrap 3.3.7"
-      usesDefine="false"
-      version="3.3.7"
-      webResourceBundleID="bootstrap_3.3.7_Debug">
-      <webResource
-        relativePathSource="js-src/bootstrap/3_3_7/debug/"
-        relativePathTarget="js-src/bootstrap/3_3_7/debug/">
-      </webResource>
-      <importResource relativePath="js-src/bootstrap/3_3_7/debug/css/bootstrap.css" type="CSS" />
-      <importResource relativePath="js-src/bootstrap/3_3_7/debug/css/bootstrap-theme.css" type="CSS" />
-      <importResource relativePath="js-src/bootstrap/3_3_7/debug/js/bootstrap.js" type="JAVASCRIPT" />
-      <webDependency webResourceBundleID="jQuery_3.1.1"></webDependency>
-    </webResourceBundle>
+      
+      
+      
+      
   </extension>
 </plugin>
