--- a/de.bund.bfr.knime.fsklab.metadata.model/build.properties
+++ b/de.bund.bfr.knime.fsklab.metadata.model/build.properties
@@ -5,6 +5,7 @@ bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
+generatedviews/,\
                libs/ez-vcard-0.10.2.jar
 jars.compile.order = .
 source.. = src/
