fix the org.emfjson.jackson dependency issue in all projects

--- a/de.bund.bfr.knime.fsklab.metadata.model/build.properties
+++ b/de.bund.bfr.knime.fsklab.metadata.model/build.properties
@@ -5,8 +5,9 @@ bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
-			   generatedviews/,\
-               libs/ez-vcard-0.10.2.jar
+               generatedviews/,\
+               libs/emfjson-jackson-1.0.0-rc.1.jar
 jars.compile.order = .
-source.. = src/
+source.. = src/,\
+           fix_src/
 output.. = bin/
