fix issues with ResourceBundle

--- a/de.bund.bfr.knime.fsklab.metadata.model/resources/metadatatree.properties
+++ b/de.bund.bfr.knime.fsklab.metadata.model/resources/metadatatree.properties
@@ -126,7 +126,7 @@ StudySample.samplingStrategy = Sampling strategy
 StudySample.typeOfSamplingProgram = Type of sampling program
 StudySample.samplingMethod = Sampling method
 StudySample.samplingPlan = Sampling plan
-StudySample.samplingWeigth = Sampling weight
+StudySample.samplingWeight = Sampling weight
 StudySample.samplingSize = Sampling size
 StudySample.lotSizeUnit = Lot size unit
 StudySample.samplingPoint = Sampling point
