--- a/de.bund.bfr.knime.fsklab.metadata.model/build.properties
+++ b/de.bund.bfr.knime.fsklab.metadata.model/build.properties
@@ -9,5 +9,6 @@ bin.includes = .,\
                libs/emfjson-jackson-1.0.0-rc.1.jar
 jars.compile.order = .
 source.. = src/,\
-           fix_src/
+           fix_src/,\
+           resources/
 output.. = bin/
