--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-bin
+# Ignore all the binaries except the packaged R (R-Inst/bin)
+de.bund.bfr.knime.fsklab.nodes/bin
+de.bund.bfr.knime.fsklab.nodes.deprecated/bin
+de.bund.bfr.knime.fsklab.nodes.deprecated2/bin
+de.bund.bfr.knime.fsklab.scripts/bin
+de.bund.bfr.knime.fsklab.target/bin
+de.bund.bfr.knime.fsklab.update.p2.deploy/bin
+de.bund.bfr.knime.fsklab.util/bin
+de.bund.bfr.knime.fsklab.metadata.model/bin
 .metadata
 
 # Ignore .DS_Store on Mac
