--- a/de.bund.bfr.formats/.project
+++ b/de.bund.bfr.formats/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.uni-rostock.sbi.CombineArchive</name>
+	<name>de.bund.bfr.formats</name>
 	<comment></comment>
 	<projects>
 	</projects>
