Add formats libraries to classpath

--- a/de.bund.bfr.formats/build.properties
+++ b/de.bund.bfr.formats/build.properties
@@ -1,2 +1,9 @@
 bin.includes = META-INF/,\
-               .
+               .,\
+               BFLog-1.3.3.jar,\
+               CombineArchive-1.1.jar,\
+               ez-vcard-0.10.2.jar,\
+               jris-1.0.0.jar,\
+               jsbml-1.2-SNAPSHOT-with-dependencies.jar,\
+               pmfml-0.0.11.jar,\
+               vinnie-2.0.0.jar
