Add support for features toggles with Togglz
Currently only me has admin rights with user name *de*. We need to
collect a number of user names for those that want to use experimental
features.

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -13,7 +13,8 @@ bin.includes = META-INF/,\
                sedml_libs/xom-1.2.5.jar,\
                libs/batik-svg-dom.jar,\
                libs/batik-util-1.7.jar,\
-               js-src/
+               js-src/,\
+               libs/togglz-core-2.6.1.Final.jar
 source.. = src/,\
            resources/
            output.. = bin/
