--- a/de.bund.bfr.knime.nodes.util/.project
+++ b/de.bund.bfr.knime.nodes.util/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.bund.br.knime.nodes.util</name>
+	<name>de.bund.bfr.knime.nodes.util</name>
 	<comment></comment>
 	<projects>
 	</projects>
