Remove duplicated BfR formats project
The duplicated BfR formats project from PMM-Lab is removed and only one
is used for PMM-Lab and FSK-Lab.

--- a/de.bund.bfr.knime.pmm.nodes/build.properties
+++ b/de.bund.bfr.knime.pmm.nodes/build.properties
@@ -8,5 +8,6 @@ bin.includes = plugin.xml,\
                bfr-swing-1.0-SNAPSHOT.jar,\
                jcalendar-1.4.jar,\
                nashorn.jar,\
-               metanode_templates/
+               metanode_templates/,\
+               fskml-0.0.1-SNAPSHOT.jar
 source.library.jar = src/, test/
