--- a/de.bund.bfr.knime.pmm.nodes/.classpath
+++ b/de.bund.bfr.knime.pmm.nodes/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry exported="true" kind="lib" path="jsoup-1.9.2.jar"/>
 	<classpathentry kind="lib" path="bfr-swing-1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="fskml-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
