Move metadata tests to separate project and add them to build

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,6 @@
 		<module>bundles</module>
 		<module>features</module>
 		<module>releng</module>
+		<module>tests</module>
 	</modules>
-
 </project>
