--- a/tests/de.bund.bfr.knime.fsklab.metadata.model.test/.project
+++ b/tests/de.bund.bfr.knime.fsklab.metadata.model.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.bund.bfr.knime.fsklab.nodes.test</name>
+	<name>de.bund.bfr.knime.fsklab.metadata.model.test</name>
 	<comment></comment>
 	<projects>
 	</projects>
