--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -1,19 +1,18 @@
 <project>
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>de.bund.bfr.knime</groupId>
-    <artifactId>de.bund.bfr.knime.tests</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>de.bund.bfr.knime</groupId>
+	<artifactId>de.bund.bfr.knime.tests</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
-    <parent>
-        <groupId>de.bund.bfr.knime</groupId>
-        <artifactId>de.bund.bfr.knime.root</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+	<parent>
+		<groupId>de.bund.bfr.knime</groupId>
+		<artifactId>de.bund.bfr.knime.root</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 
-    <modules>
-        <module>de.bund.bfr.knime.fsklab.nodes.test</module>
-    </modules>
+	<modules>
+		<module>de.bund.bfr.knime.fsklab.metadata.model.test</module>
+	</modules>
 </project>
-
