Replace embedded jar with Eclipse bundle for JCalendar

--- a/bundles/de.bund.bfr.knime.fsklab.nodes.common/build.properties
+++ b/bundles/de.bund.bfr.knime.fsklab.nodes.common/build.properties
@@ -3,5 +3,4 @@ source.. = src/,\
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               libs/bfr-swing-1.0-SNAPSHOT.jar,\
-               libs/jcalendar-1.4.jar
+               libs/bfr-swing-1.0-SNAPSHOT.jar
