Revert "Remove Jsoup and JDOM bundles"
This reverts commit 4bbe99e28df42ef66dfe26adc8953ba35bef5a1a.

--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -34,6 +34,8 @@
 		<module>org.freixas.jcalendar</module>
 		<module>org.hsh.bfr.db</module>
 		<module>org.javers</module>
+		<module>org.jdom2</module>
+		<module>org.jsoup</module>
 		<module>quick.dbtable</module>
 	</modules>
 
