Try to fix Travis nightly build

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ notifications:
    # Email notifications are disabled
    email: false
 deploy:
-   provider: script
+-  provider: script
    skip_cleanup: true # to upload artifacts created during the build
    script: bash bintray.sh
    on:
       branch: release
-   provider: script
+-  provider: script
    skip_cleanup: true
    script: bash bintray_nightly.sh
    on:
