Add BfR internal nodes to FSK-Lab

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>de.bund.bfr.knime.fsklab.feature</module>
         <module>de.bund.bfr.knime.fsklab.legacy.feature</module>
+        <module>de.bund.bfr.knime.internal.feature</module>
         <module>de.bund.bfr.knime.pmm.feature</module>
     </modules>
 </project>
