--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -24,6 +24,7 @@
 		<module>de.bund.bfr.knime.fsklab.r</module>
 		<module>de.bund.bfr.knime.fsklab.type</module>
 		<module>de.bund.bfr.knime.fsklab.util</module>
+		<module>de.bund.bfr.knime.internal.nodes</module>
 		<module>de.bund.bfr.knime.nodes.util</module>
 		<module>de.bund.bfr.knime.pmm.bfrdbiface.lib</module>
 		<module>de.bund.bfr.knime.pmm.common</module>
