Fix #266 Add README in PMFX archives (PMM-Lab)

--- a/bundles/de.bund.bfr.formats/build.properties
+++ b/bundles/de.bund.bfr.formats/build.properties
@@ -5,5 +5,5 @@ bin.includes = META-INF/,\
                ez-vcard-0.10.2.jar,\
                jris-1.0.0.jar,\
                jsbml-1.2-SNAPSHOT-with-dependencies.jar,\
-               pmfml-0.0.11.jar,\
-               vinnie-2.0.0.jar
+               vinnie-2.0.0.jar,\
+               pmfml-0.0.12.jar
