Add old PMM-Lab tests to FSK-Lab build
Tests are from JS utility classes (de.bund.bfr.knime.pmm.js.common). The
original test classes were in the PMM nodes project and have been moved
to the new project de.bund.bfr.knime.pmm.nodes.test.

--- a/de.bund.bfr.knime.testreport/pom.xml
+++ b/de.bund.bfr.knime.testreport/pom.xml
@@ -129,5 +129,11 @@
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>de.bund.bfr.knime</groupId>
+			<artifactId>de.bund.bfr.knime.pmm.nodes.test</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
