--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 		<module>de.bund.bfr.knime.fsklab.metadata.model.test</module>
 		<module>de.bund.bfr.knime.fsklab.nodes.test</module>
 		<module>de.bund.bfr.knime.pmm.common.test</module>
+		<module>de.bund.bfr.knime.pmm.nodes.test</module>
 
 		<!-- Test report -->
 		<module>de.bund.bfr.knime.testreport</module>
